updated top about section

--- a/css/default.css
+++ b/css/default.css
@@ -87,7 +87,7 @@ pre {
    word-wrap: break-word;
 }
 
-blockquote, q { quotes: &#8220 &#8220; }
+/* blockquote, q { quotes: &#8220 &#8220; } */
 
 blockquote:before, blockquote:after,
 q:before, q:after {
@@ -143,7 +143,7 @@ html {
 
 body {
    background: #fff;
-   font-family: 'opensans-regular', sans-serif;
+   font-family: 'muli-regular', sans-serif;
    font-weight: normal;
    font-size: 15px;
    line-height: 30px;
@@ -159,9 +159,27 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
    color: #313131;
-	font-family: 'opensans-bold', sans-serif;
+	font-family: 'metropolis-bold', sans-serif;
    font-weight: normal;
 }
+
+h5.subheading {
+   /* TODO: Need to change the color based on the design to a blue */
+   color: white;
+   text-align: center;
+   letter-spacing: 5px;
+   font-size: small;
+   padding-bottom: 50px;
+}
+
+p.opening {
+   color: white;
+   text-align: left;
+   font-size: large;
+   padding-left: 5%;
+}
+
+
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 h1 { font-size: 38px; line-height: 42px; margin-bottom: 12px; letter-spacing: -1px; }
 h2 { font-size: 28px; line-height: 36px; margin-bottom: 6px; }
@@ -174,14 +192,14 @@ h6 { font-size: 14px; line-height: 30px; }
 p { margin: 0 0 30px 0; }
 p img { margin: 0; }
 p.lead {
-   font: 19px/36px 'opensans-light', sans-serif;
+   font: 19px/36px 'muli-light', sans-serif;
    margin-bottom: 18px;
 }
 
 /* for 'em' and 'strong' tags, font-size and line-height should be same with
 the body tag due to rendering problems in some browsers */
-em { font: 15px/30px 'opensans-italic', sans-serif; }
-strong, b { font: 15px/30px 'opensans-bold', sans-serif; }
+em { font: 15px/30px 'muli-italic', sans-serif; }
+strong, b { font: 15px/30px 'muli-bold', sans-serif; }
 small { font-size: 11px; line-height: inherit; }
 
 /*	Blockquotes */
@@ -203,7 +221,7 @@ blockquote:before {
 	left: 0;
 }
 blockquote p {
-   font-family: 'librebaskerville-italic', serif;
+   font-family: 'muli-italic', serif;
    padding: 0;
    font-size: 18px;
    line-height: 36px;
@@ -259,7 +277,7 @@ blockquote cite a:visited { color: #8B9798; border: none }
 
 /* Abbreviations */
 abbr {
-   font-family: 'opensans-bold', sans-serif;
+   font-family: 'muli-bold', sans-serif;
 	font-variant: small-caps;
 	text-transform: lowercase;
    letter-spacing: .5px;
@@ -273,7 +291,7 @@ abbr:hover { cursor: help; }
 	margin: 0;
 	padding: 14px 6px 0 0;
 	font-size: 84px;
-	font-family: /* Copperplate */ 'opensans-bold', sans-serif;
+	font-family: /* Copperplate */ 'muli-bold', sans-serif;
    line-height: 60px;
 	text-indent: 0;
 	background: transparent;
@@ -344,7 +362,7 @@ li p { }
 .stats-tabs li a {
 	display: inline-block;
 	font-size: 22px;
-	font-family: 'opensans-bold', sans-serif;
+	font-family: 'muli-bold', sans-serif;
    border: none;
    color: #313131;
 }
@@ -355,7 +373,7 @@ li p { }
 	display: block;
 	margin: 6px 0 0 0;
 	font-size: 13px;
-	font-family: 'opensans-regular', sans-serif;
+	font-family: 'muli-regular', sans-serif;
    color: #8B9798;
 }
 
@@ -411,7 +429,7 @@ dd { margin: 0 0 0 20px; }
    padding: 0;
 }
 .pagination .page-numbers {
-   font: 15px/18px 'opensans-bold', sans-serif;
+   font: 15px/18px 'muli-bold', sans-serif;
    display: inline-block;
    padding: 6px 10px;
    margin-right: 3px;
@@ -463,7 +481,7 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-   font: 16px/30px 'opensans-bold', sans-serif;
+   font: 16px/30px 'muli-bold', sans-serif;
    background: #11ABB0;
    display: inline-block;
 	text-decoration: none;
@@ -565,7 +583,7 @@ textarea { min-height: 220px; }
 
 label,
 legend {
-   font: 16px/24px 'opensans-bold', sans-serif;
+   font: 16px/24px 'muli-bold', sans-serif;
 	margin: 12px 0;
    color: #3d4145;
    display: block;
@@ -573,7 +591,7 @@ legend {
 label span,
 legend span {
 	color: #8B9798;
-   font: 14px/24px 'opensans-regular', sans-serif;
+   font: 14px/24px 'muli-regular', sans-serif;
 }
 
 input[type="checkbox"],
@@ -594,7 +612,7 @@ input[type="checkbox"] { display: inline; }
 --------------------------------------------------------------- */
 .row {
    width: 96%;
-   max-width: 1020px;
+   max-width: 1600px;
    margin: 0 auto;
 }
 /* fixed width for IE8 */
