resume section completed

--- a/css/layout.css
+++ b/css/layout.css
@@ -265,7 +265,7 @@ ul#nav li.current a { color: #4da8da; font-size: larger;}
    letter-spacing: 2px;
    text-align: center;
    font: 20px 'metropolis-extrabold', sans-serif;
-   color: #eefbfb;
+   color: #12232e;
    margin-bottom: 50px;
 }
 
