--- a/css/layout.css
+++ b/css/layout.css
@@ -296,6 +296,59 @@ ul#nav li.current a { color: #4da8da; font-size: larger;}
    margin-top: 6px;
 }
 
+#resume .skills-div {
+   background-color: white;
+   padding-top: 20px;
+   padding-bottom: 20px;
+   padding-left: 5%;
+   padding-right: 5%;
+   margin-bottom: 1%;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: start;
+}
+
+#resume span.skill-heading {
+   font-family: 'muli-extrabold';
+   font-size: 20;
+   text-align: left;
+   color: #12232E;
+   letter-spacing: 2px;
+}
+
+#resume div.skill-set-div {
+   margin-top: 30px;
+   margin-bottom: 10px;
+   display: flex;
+   flex-direction: row;
+   justify-content: left;
+   overflow-x: auto;
+}
+
+#resume div.individual-skill-div {
+   display: flex;
+   flex-direction: column;
+   justify-content: start;
+   align-items: center;
+   margin-left: 2%;
+   margin-right: 2%;
+}
+
+#resume img.skill-image {
+   height: 75px;
+   width: auto;
+}
+
+#resume span.skill-tag {
+   font-family: 'muli-light';
+   font-size: 20;
+   text-align: center;
+   color: #12232E;
+   letter-spacing: 2px;
+}
+
+
 /*----------------------------------------------*/
 /*	Skill Bars
 /*----------------------------------------------*/
