--- a/css/layout.css
+++ b/css/layout.css
@@ -988,6 +988,22 @@ ul#nav li.current a {
 }
 
 /* ------------------------------------------------------------------ */
+/* Achievements Section
+/* ------------------------------------------------------------------ */
+
+#achievements {
+    background-color: #eefbfb;
+}
+#achievements h2.heading {
+    padding-top: 80px;
+    letter-spacing: 2px;
+    text-align: center;
+    font: 20px 'metropolis-extrabold', sans-serif;
+    color:#12232e;
+    margin-bottom: 50px;
+}
+
+/* ------------------------------------------------------------------ */
 /* f. Call To Action Section
 /* ------------------------------------------------------------------ */
 
@@ -1638,6 +1654,7 @@ button.project-button {
     background-color: #203647;
     border-radius: 5px;
     margin-right: 20px;
+    text-align: center;
 }
 
 button.project-button:hover {
@@ -1885,10 +1902,31 @@ i.icon-button {
         width: 100%;
         margin-left: 0;
     }
+    .achievements-container {
+        padding: 0 5%;   
+        padding-bottom: 2%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .achievements-container .achievement-button-container {
+        width: 100%;
+        padding: 20px;
+    }
 }
 
 @media only screen and (max-width: 2500px) and (min-width: 800px) {
     .project-container {
         padding: 0 15%;
+    }
+    .achievements-container {
+        padding: 0 5%;
+        padding-bottom: 2%;
+        display: flex;
+        flex-direction: row;
+    }
+    .achievements-container .achievements-button-container {
+        width: 20%;
+        margin: 0 10px;
     }
 }
