--- a/css/achievements.css
+++ b/css/achievements.css
@@ -4,11 +4,13 @@
     height: 100px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    overflow-x: auto;
+    overflow-y: visible;
 }
 
 .heading-main-container {
     height: 100%;
+    width: 19.5vw;
     cursor: pointer;
     background-color: white;
     transition: background-color 0.5 ease;
@@ -30,12 +32,14 @@
 .heading-main-container .number-container {
     text-align: end;
 }
+
 .heading-main-container .title-container {
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
     align-self: center;
 }
+
 .heading-main-container .number-container span {
     font-family: 'metropolis-bold';
     font-size: 20px;
@@ -51,24 +55,142 @@
     flex-wrap: wrap;
 }
 
+.list-of-achievements-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
 
+.individual-achievement-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 20px;
+    box-shadow: 5px 5px 10px #cccccc;
+}
+
+.individual-achievement-container .title-description-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.individual-achievement-container .title-description-container span.title {
+    font-family: 'metropolis-extrabold';
+    font-size: 25px;
+    color: #12232e;
+}
+
+.individual-achievement-container .title-description-container p.description {
+    padding-top: 5px;
+    font-family: 'muli-light';
+    font-size: 18px;
+    color: #12232e;
+    margin-bottom: 0;
+}
+
+.button-container button.achievement-link-button {
+    background-color: #12232e;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.button-container button.achievement-link-button:hover {
+    background-color: #007cc7;
+}
 
 .tab-content {
     display: none;
 }
 
-.left-content {
-    padding-left: 4rem;
-    padding-top: 4rem;
-    font-size: 3.75rem;
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+    transition: background-color 0.5s ease;
 }
 
-.right-content {
-    padding-left: 4rem;
-    padding-top: 4rem;
+/* Modal Content */
+.modal-content {
+    border-radius: 20px;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
 }
 
-.img-custwidth {
-    padding-top: 4rem;
-    width: 512px;
+h2.modal-content-title {
+    font-family: 'metropolis-bold';
+    font-size: 24px;
+    color: #12232e;
+}
+
+a.modal-content-links {
+    font-family: 'muli-italic';
+    font-size: 16px;
+    color: #007cc7;
+}
+a.modal-content-links:hover {
+    text-decoration: underline;
+    color: #12232e;
+}
+
+/* The Close Button */
+.close-comed {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-comed:hover,
+.close-comed:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
+@media only screen and (max-width: 2500px) and (min-width: 1200px) {
+    .tab-content {
+        padding: 5% 15%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .tab-content {
+        padding: 5% 5%;
+    }
+    .heading-container {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .heading-main-container {
+        height: 100%;
+        width: 100%;
+    }
 }
